@@ -1,3 +1,9 @@
+2003-02-15  Mikael Hallendal  <micke@codefactory.se>
+
+	* src/dh-search.c (search_entry_key_press_event_cb): 
+	- Added, don't move focus when hitting tab in search entry.
+	- Move to hit list when Ctrl+tab.
+
 2003-02-13  Mikael Hallendal  <micke@codefactory.se>
 
 	* src/dh-book-tree.c (book_tree_insert_node): speeeeeeeeeeedup!
